--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
         "@ngx-translate/core": "^7.0.0",
         "@ngx-translate/http-loader": "^0.1.0",
+        "bootstrap-slider": "^9.8.1",
         "core-js": "^2.4.1",
         "font-awesome": "^4.7.0",
+        "jquery": "^3.2.1",
         "ng2-charts": "^1.6.0",
+        "ng2-slider-component": "^1.0.9",
         "rxjs": "^5.1.0",
         "zone.js": "^0.8.4"
     },
