--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
         "@ngx-translate/core": "^7.0.0",
         "@ngx-translate/http-loader": "^0.1.0",
+        "angular2-google-maps": "^0.17.0",
         "bootstrap-slider": "^9.8.1",
         "core-js": "^2.4.1",
         "font-awesome": "^4.7.0",
