--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve --ec true",
-        "build": "ng build --prod",
+        "build": "ng build ",
         "gitbuild": "ng build --prod --base /start-angular/SB-Admin-BS4-Angular-4/master/dist/",
         "test": "ng test",
         "lint": "ng lint",
